--- a/style.scss
+++ b/style.scss
@@ -110,6 +110,7 @@ h4{
     background:#fff url(loading-vid.gif);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 100%;
     width: 100%;
     display: flex;
