--- a/style.scss
+++ b/style.scss
@@ -109,7 +109,7 @@ h4{
     right: 0;
     background:#fff url(loading-vid.gif);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:contain;
     background-position: center;
     height: 100%;
     width: 100%;
